--- a/package.json
+++ b/package.json
@@ -29,18 +29,13 @@
       "pre-commit": "tsdx lint"
     }
   },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
   "name": "pulse-feed",
   "author": "Eugene Dzhumak",
   "module": "dist/pulse-feed.esm.js",
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.4.5",
     "husky": "^4.2.5",
+    "prettier": "^2.0.5",
     "size-limit": "^4.4.5",
     "tsdx": "^0.13.2",
     "tslib": "^1.11.1",
