--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "peerDependencies": {},
   "size-limit": [
     {
-      "path": "dist/pulse-feed.cjs.production.min.js"
+      "path": "dist/pulse-feed-parser.cjs.production.min.js"
     }
   ],
   "husky": {
@@ -29,9 +29,9 @@
       "pre-commit": "tsdx lint"
     }
   },
-  "name": "pulse-feed",
+  "name": "pulse-feed-parser",
   "author": "Eugene Dzhumak",
-  "module": "dist/pulse-feed.esm.js",
+  "module": "dist/pulse-feed-parser.esm.js",
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.4.5",
     "husky": "^4.2.5",
@@ -40,5 +40,6 @@
     "tsdx": "^0.13.2",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
-  }
+  },
+  "dependencies": {}
 }
