--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "module": "dist/pulse-feed-parser.esm.js",
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.5.5",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "size-limit": "^4.5.5",
