feat: sanitizer improvements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     },
     "jsx": "react",
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "downlevelIteration": true
   }
 }
